# ros2-voiceroid2

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
voiceroid2/: talker.py
