[metadata]
name = voiceroid2
version = 0.1.1
url = https://github.com/Nkyoku/ros2-voiceroid2.git
author = Fujii Naomichi
license_file = LICENSE
description = ROS2 wrapper of VOICEROID2
long_description = file: README.md
platforms = Windows

[options]
packages = voiceroid2
entry_points=
    [console_scripts]
    talker = voiceroid2.talker:main

[options.data_files]
share/ament_index/resource_index/packages = resource/voiceroid2
share/voiceroid2 = package.xml

[develop]
script_dir=$base/lib/voiceroid2

[install]
install_scripts=$base/lib/voiceroid2
